<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
   <include android:id="@+id/buttons"
    	layout="@layout/button_panel" />
 
    <ScrollView 
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent"
			android:layout_alignParentTop="true"
			android:layout_above="@id/buttons"
			android:scrollbars="vertical" >
			
		<LinearLayout
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent" 
			android:orientation="vertical"
			android:padding="@dimen/plugin_layout_padding" >
			
			<TextView
				android:text="@string/accelerometer_plugin_name" 
				style="@style/plugin_name_style" />
			
			<TextView
				android:text="@string/accelerometer_frequency_desc" 
				style="@style/seekbar_desc_style" />
			
			<TextView
				android:id="@+id/seekBar_value" 
				style="@style/seekbar_value_style" />

		    <SeekBar android:id="@+id/seekBar" 
				style="@style/seekbar_style" />

			<include layout="@layout/visualizer_spinner" />
			
			<TextView
				android:text="@string/accelerometer_desc" 
				style="@style/plugin_desc_style" />

		</LinearLayout>
	</ScrollView>

</RelativeLayout>
